MAGNOLIA-1392 / MAGNOLIA-1797 openwfe 1.7.2.1 was released !
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@12557 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-workflow/pom.xml
+++ b/magnolia-module-workflow/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>magnolia-module-workflow</artifactId>
   <name>magnolia-module-workflow</name>
   <properties>
-    <openwfe.version>1.7.2.1-SNAPSHOT</openwfe.version>
+    <openwfe.version>1.7.2.1</openwfe.version>
   </properties>
   <dependencies>
     <dependency>
