--- a/magnolia-bundle/pom.xml
+++ b/magnolia-bundle/pom.xml
@@ -19,7 +19,7 @@
       <plugin>
         <groupId>info.magnolia</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
         <executions>
           <execution>
             <phase>process-resources</phase>
