--- a/magnolia-module-admininterface/pom.xml
+++ b/magnolia-module-admininterface/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.5-SNAPSHOT</version>
+    <version>3.5-rc1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,22 +13,22 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-exchange-simple</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-jaas</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
