--- a/magnolia-webapp/pom.xml
+++ b/magnolia-webapp/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.5-SNAPSHOT</version>
+    <version>3.5-rc1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-webapp</artifactId>
   <packaging>war</packaging>
   <name>magnolia-webapp</name>
-  <version>3.5-SNAPSHOT</version>
+  <version>3.5-rc1</version>
   <profiles>
     <profile>
       <id>with-optional-modules</id>
@@ -37,57 +37,57 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-templating</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-utility</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-cms</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-cache</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-exchange-simple</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-jaas</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-editor-fckeditor</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-mail</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.jackrabbit</groupId>
