[maven-release-plugin] prepare for next development iteration
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@12648 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-webapp/pom.xml
+++ b/magnolia-webapp/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.5-rc1</version>
+    <version>3.5-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-webapp</artifactId>
   <packaging>war</packaging>
   <name>magnolia-webapp</name>
-  <version>3.5-rc1</version>
+  <version>3.5-SNAPSHOT</version>
   <profiles>
     <profile>
       <id>with-optional-modules</id>
