--- a/magnolia-module-samples/pom.xml
+++ b/magnolia-module-samples/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
     <relativePath>../pom.xml</relativePath>
-    <version>3.5-rc1</version>
+    <version>3.5-SNAPSHOT</version>
   </parent>
   <artifactId>magnolia-module-samples</artifactId>
   <name>magnolia-module-samples</name>
