--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>magnolia-project</artifactId>
   <packaging>pom</packaging>
   <name>magnolia-project</name>
-  <version>3.5-rc1</version>
+  <version>3.5-SNAPSHOT</version>
   <description>
     Magnolia is a free enterprise class content management system developed by Magnolia International based on the
     standard API for java content repositories (JCR).
@@ -94,9 +94,9 @@
     </developer>
   </developers>
   <scm>
-    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-3.5-rc1</connection>
-    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-3.5-rc1</developerConnection>
-    <url>http://svn.magnolia.info/view/magnolia/tags/magnolia-3.5-rc1</url>
+    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</connection>
+    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</developerConnection>
+    <url>http://svn.magnolia.info/view/magnolia/trunk/</url>
   </scm>
   <organization>
     <name>Magnolia International</name>
