--- a/magnolia-bundle/pom.xml
+++ b/magnolia-bundle/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.5-SNAPSHOT</version>
+    <version>3.5-rc1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -51,7 +51,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2-beta-2-SNAPSHOT</version>
+        <version>2.2-beta-2-magnolia-20071115</version>
         <!--<version>2.2-beta-1</version>-->
         <!--<version>2.1.1-magnolia</version>-->
         <executions>
@@ -81,26 +81,26 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-webapp</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
       <type>war</type>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-dms</artifactId>
-      <version>1.2-SNAPSHOT</version>
+      <version>1.2-rc1</version>
       <classifier>module-bundle</classifier>
       <type>tar.gz</type>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-dms</artifactId>
-      <version>1.2-SNAPSHOT</version>
+      <version>1.2-rc1</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-workflow</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
       <classifier>module-bundle</classifier>
       <type>tar.gz</type>
     </dependency>
@@ -113,14 +113,14 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-samples</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
       <classifier>module-bundle</classifier>
       <type>tar.gz</type>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-samples</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc1</version>
       <type>jar</type>
     </dependency>
   </dependencies>
