[maven-release-plugin] prepare release magnolia-bundle-3.5-rc1
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@12656 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-bundle/pom.xml
+++ b/magnolia-bundle/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>magnolia-bundle</artifactId>
   <packaging>pom</packaging>
   <name>magnolia-bundle</name>
-  <version>3.5-SNAPSHOT</version>
+  <version>3.5-rc1</version>
 
   <build>
     <plugins>
@@ -126,4 +126,10 @@
   </dependencies>
 
 
+
+  <scm>
+    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-bundle-3.5-rc1</connection>
+    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-bundle-3.5-rc1</developerConnection>
+    <url>http://svn.magnolia.info/view/magnolia/tags/magnolia-bundle-3.5-rc1</url>
+  </scm>
 </project>
