--- a/magnolia-module-exchange-simple/pom.xml
+++ b/magnolia-module-exchange-simple/pom.xml
@@ -13,7 +13,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.5-rc1</version>
+      <version>3.5-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
