--- a/magnolia-module-workflow/pom.xml
+++ b/magnolia-module-workflow/pom.xml
@@ -15,25 +15,25 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.5-rc1</version>
+      <version>3.5-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-exchange-simple</artifactId>
-      <version>3.5-rc1</version>
+      <version>3.5-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>3.5-rc1</version>
+      <version>3.5-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>3.5-rc1</version>
+      <version>3.5-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
