MAGNOLIA-1165 : renamed magnolia-webapp to magnolia-empty-webapp
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@12721 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-bundle/pom.xml
+++ b/magnolia-bundle/pom.xml
@@ -80,7 +80,7 @@
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
-      <artifactId>magnolia-webapp</artifactId>
+      <artifactId>magnolia-empty-webapp</artifactId>
       <version>3.5-SNAPSHOT</version>
       <type>war</type>
     </dependency>
