MAGNOLIA-1165 / MAGNOLIA-1866 : txt files now processed with remote-resources-plugin (which attaches them to resources and test-resources, which is why the junit dependency is also needed for projects without tests)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13157 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -112,6 +112,15 @@
     </dependency>
   </dependencies>
   <build>
+    <resources>
+      <resource>
+        <!-- these are the resources copied by the remote-resources-plugin -->
+        <directory>${project.build.directory}/maven-shared-archive-resources</directory>
+        <excludes>
+          <exclude>**/*</exclude>
+        </excludes>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -123,6 +132,10 @@
               <!-- without basedir it fails during a multimodule execution   -->
               <directory>${basedir}/src/release</directory>
               <filtering>true</filtering>
+            </resource>
+            <resource>
+              <!-- these are the resources copied by the remote-resources-plugin -->
+              <directory>${project.build.directory}/maven-shared-archive-resources</directory>
             </resource>
           </webResources>
         </configuration>
