--- a/magnolia-jaas/pom.xml
+++ b/magnolia-jaas/pom.xml
@@ -35,5 +35,9 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 </project>
