MAGNOLIA-473 Fixed inner status (begin, end, count, index). Added test.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13159 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-taglib-cms/pom.xml
+++ b/magnolia-taglib-cms/pom.xml
@@ -15,6 +15,13 @@
       <version>3.5-SNAPSHOT</version>
     </dependency>
     <dependency>
+       <groupId>info.magnolia</groupId>
+       <artifactId>magnolia-core</artifactId>
+       <type>test-jar</type>
+       <version>3.5-SNAPSHOT</version>
+       <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
       <version>3.5-SNAPSHOT</version>
@@ -30,8 +37,14 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>com.mockrunner</groupId>
+      <artifactId>mockrunner</artifactId>
+      <version>0.3.1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
   <reporting>
