MAGNOLIA-1895 : updated licenses, descriptions, url in pom files
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13288 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-workflow/pom.xml
+++ b/magnolia-module-workflow/pom.xml
@@ -8,6 +8,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-module-workflow</artifactId>
   <name>magnolia-module-workflow</name>
+  <description></description>
+  <url>http://documentation.magnolia.info/modules/workflow.html</url>
   <properties>
     <openwfe.version>1.7.2.1</openwfe.version>
   </properties>
