changed version of release plugin to beta 7
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13300 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,13 @@ for Java Content Repositories (JCR).
       <organization>Magnolia Intl</organization>
       <timezone>+1</timezone>
     </developer>
+    <developer>
+      <id>had</id>
+      <name>Jan Haderka</name>
+      <email>jan.haderka(at)magnolia.info</email>
+      <organization>Magnolia Intl</organization>
+      <timezone>+1</timezone>
+    </developer>
   </developers>
   <scm>
     <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</connection>
@@ -200,7 +207,7 @@ for Java Content Repositories (JCR).
         </plugin>
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.0-beta-4</version>
+          <version>2.0-beta-7</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
