--- a/magnolia-module-workflow/pom.xml
+++ b/magnolia-module-workflow/pom.xml
@@ -2,13 +2,13 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.5-SNAPSHOT</version>
+    <version>3.5-rc2</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-module-workflow</artifactId>
   <name>magnolia-module-workflow</name>
-  <description></description>
+  <description />
   <url>http://documentation.magnolia.info/modules/workflow.html</url>
   <properties>
     <openwfe.version>1.7.2.1</openwfe.version>
@@ -17,25 +17,25 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-exchange-simple</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>3.5-SNAPSHOT</version>
+      <version>3.5-rc2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
