[maven-release-plugin] prepare release magnolia-3.5-rc3
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13419 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>magnolia-project</artifactId>
   <packaging>pom</packaging>
   <name>magnolia-project</name>
-  <version>3.5-rc3-SNAPSHOT</version>
+  <version>3.5-rc3</version>
   <description>
 Magnolia is an open-source enterprise class
 Content Management System developed by
@@ -112,9 +112,9 @@ for Java Content Repositories (JCR).
     </developer>
   </developers>
   <scm>
-    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</connection>
-    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</developerConnection>
-    <url>http://svn.magnolia.info/view/magnolia/trunk/</url>
+    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-3.5-rc3</connection>
+    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-3.5-rc3</developerConnection>
+    <url>http://svn.magnolia.info/view/magnolia/tags/magnolia-3.5-rc3</url>
   </scm>
   <organization>
     <name>Magnolia International</name>
