--- a/magnolia-module-samples/pom.xml
+++ b/magnolia-module-samples/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
     <relativePath>../pom.xml</relativePath>
-    <version>3.5-rc3</version>
+    <version>3.5-rc4-SNAPSHOT</version>
   </parent>
   <artifactId>magnolia-module-samples</artifactId>
   <name>magnolia-module-samples</name>
@@ -13,19 +13,19 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>3.5-rc3</version>
+      <version>3.5-rc4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-cms</artifactId>
-      <version>3.5-rc3</version>
+      <version>3.5-rc4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-taglib-utility</artifactId>
-      <version>3.5-rc3</version>
+      <version>3.5-rc4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
