replacing ${project.build.directory} by ${basedir}/target seems to make the release plugin generally happier
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13498 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -115,7 +115,7 @@
     <resources>
       <resource>
         <!-- these are the resources copied by the remote-resources-plugin -->
-        <directory>${project.build.directory}/maven-shared-archive-resources</directory>
+        <directory>${basedir}/target/maven-shared-archive-resources</directory>
         <excludes>
           <exclude>**/*</exclude>
         </excludes>
@@ -129,7 +129,7 @@
           <webResources>
             <resource>
               <!-- these are the resources copied by the remote-resources-plugin -->
-              <directory>${project.build.directory}/maven-shared-archive-resources</directory>
+              <directory>${basedir}/target/maven-shared-archive-resources</directory>
             </resource>
           </webResources>
         </configuration>
