MAGNOLIA-1291 : changed note into warning
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13500 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -3,7 +3,8 @@
 # configured in the config repository.
 # They are used in common before the initialization
 # of the repositories.
-# NOTE: on Windows systems, either use the /
+#
+# WARNING: on Windows systems, either use the /
 # to separate path elements, or escape the \ with
 # another \, i.e C:\\magnolia\\data\\repositories
 #--------------------------------------------
