adding default <url> tag to all poms ( MGNLEE-68 )
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13504 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-editor-fckeditor/pom.xml
+++ b/magnolia-editor-fckeditor/pom.xml
@@ -8,6 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-editor-fckeditor</artifactId>
   <name>magnolia-editor-fckeditor</name>
+  <url>http://www.magnolia.info</url>
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
