--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -9,6 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-core</artifactId>
   <name>magnolia-core</name>
+  <url>http://www.magnolia.info</url>
   <dependencies>
     <dependency>
       <groupId>commons-io</groupId>
