--- a/magnolia-jaas/pom.xml
+++ b/magnolia-jaas/pom.xml
@@ -8,6 +8,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-jaas</artifactId>
   <name>magnolia-jaas</name>
+  <url>http://www.magnolia.info</url>
   <dependencies>
     <dependency>
       <groupId>commons-lang</groupId>
