--- a/magnolia-module-exchange-simple/pom.xml
+++ b/magnolia-module-exchange-simple/pom.xml
@@ -9,6 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-module-exchange-simple</artifactId>
   <name>magnolia-module-exchange-simple</name>
+  <url>http://www.magnolia.info</url>
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
