--- a/magnolia-taglib-utility/pom.xml
+++ b/magnolia-taglib-utility/pom.xml
@@ -9,6 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>magnolia-taglib-utility</artifactId>
   <name>magnolia-taglib-utility</name>
+  <url>http://www.magnolia.info</url>
   <dependencies>
     <dependency>
       <groupId>info.magnolia</groupId>
