MAGNOLIA-1291 : improved warning
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13528 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -7,6 +7,7 @@
 # WARNING: on Windows systems, either use the /
 # to separate path elements, or escape the \ with
 # another \, i.e C:\\magnolia\\data\\repositories
+# or c:/magnolia/data/repositories
 #--------------------------------------------
 magnolia.cache.startdir=cache
 magnolia.upload.tmpdir=tmp
