--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@ for Java Content Repositories (JCR).
       <organization>Magnolia Intl</organization>
       <timezone>+1</timezone>
     </developer>
+    <developer>
+      <id>vsteller</id>
+      <name>Vivian Steller</name>
+      <email>vivian.steller(at)magnolia.info</email>
+      <organization>Magnolia Intl</organization>
+      <timezone>+1</timezone>
+    </developer>
   </developers>
   <scm>
     <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</connection>
@@ -342,7 +349,7 @@ for Java Content Repositories (JCR).
         <executions>
           <execution>
             <goals>
-              <goal>check</goal>
+              <!--<goal>check</goal>-->
             </goals>
           </execution>
         </executions>
