accidantally committed switched-off checkstyle
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13578 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -349,7 +349,7 @@ for Java Content Repositories (JCR).
         <executions>
           <execution>
             <goals>
-              <!--<goal>check</goal>-->
+              <goal>check</goal>
             </goals>
           </execution>
         </executions>
