--- a/magnolia-taglib-cms/pom.xml
+++ b/magnolia-taglib-cms/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>3.5.1</version>
+    <version>3.5.2-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -13,19 +13,19 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>3.5.1</version>
+      <version>3.5.2-SNAPSHOT</version>
     </dependency>
     <dependency>
        <groupId>info.magnolia</groupId>
        <artifactId>magnolia-core</artifactId>
        <type>test-jar</type>
-       <version>3.5.1</version>
+       <version>3.5.2-SNAPSHOT</version>
        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-gui</artifactId>
-      <version>3.5.1</version>
+      <version>3.5.2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
