typo in comments
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13621 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/jaas.config
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/jaas.config
@@ -1,6 +1,6 @@
 /**
  * options for JCRAuthenticationModule module:
- *   ream: to restrict the login to a certain ream
+ *   realm: to restrict the login to a certain realm
  *   use_realm_callback: to allow the GUI to pass the realm to login into
  *   skip_on_previous_success: if true the login is scipped if a former module proceeded a successfull login
  *
