MAGNOLIA-1973 : set scope of mockrunner (and junit!) to test
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13815 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-taglib-cms/pom.xml
+++ b/magnolia-taglib-cms/pom.xml
@@ -41,11 +41,12 @@
       <groupId>com.mockrunner</groupId>
       <artifactId>mockrunner</artifactId>
       <version>0.3.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <scope>provided</scope>
+      <scope>test</scope>
     </dependency>
   </dependencies>
   <reporting>
