MAGNOLIA-1978, MAGNOLIA-1979, MAGNOLIA-1986: - cms:out tags uuidToLink attribute was not working - tag tests - improved comments in the tag library
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/magnolia/trunk@13988 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/pom.xml
+++ b/magnolia-core/pom.xml
@@ -186,6 +186,12 @@
       <artifactId>jstl</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.mockrunner</groupId>
+      <artifactId>mockrunner</artifactId>
+      <version>0.3.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
