--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <artifactId>magnolia-project</artifactId>
   <packaging>pom</packaging>
   <name>magnolia-project</name>
-  <version>3.5.3</version>
+  <version>3.5.4-SNAPSHOT</version>
   <description>
 Magnolia is an open-source enterprise class
 Content Management System developed by
@@ -119,9 +119,9 @@ for Java Content Repositories (JCR).
     </developer>
   </developers>
   <scm>
-    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-3.5.3</connection>
-    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/tags/magnolia-3.5.3</developerConnection>
-    <url>http://svn.magnolia.info/view/magnolia/tags/magnolia-3.5.3</url>
+    <connection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</connection>
+    <developerConnection>scm:svn:http://svn.magnolia.info/svn/magnolia/trunk</developerConnection>
+    <url>http://svn.magnolia.info/view/magnolia/trunk/</url>
   </scm>
   <organization>
     <name>Magnolia International</name>
