--- a/magnolia-editor-fckeditor/pom.xml
+++ b/magnolia-editor-fckeditor/pom.xml
@@ -28,7 +28,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jsp-api</artifactId>
-      <scope>provide</scope>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.easymock</groupId>
