--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/config/default/magnolia.properties
@@ -43,6 +43,7 @@ magnolia.connection.jcr.password = admin
 # Server properties
 # - Do not change server id after registering repository
 #--------------------------------------------
+# @deprecated since 3.5.4 - not used
 magnolia.server.id = author
 
 # Set it to true if bootstrapping/update should be performed automatically
